--- a/bindu.tex
+++ b/bindu.tex
@@ -150,263 +150,254 @@ Herstellung: \ \ BoD – Books on Demand GmbH, Norderstedt  \\
   ]
   \begin{edition}
     \ekddiv{type=ed}
-%\nolinenumbers 
-%\smallskip
-\centerline{\textrm{\small{[\uproman{26}.\textsuperscript{\coro{\lowroman{1}-\lowroman{12}}}The 10 Channels]}}}
+    \centerline{\textrm{\small{[\uproman{44}. Gurubhakti]}}}
+          \bigskip
+    \begin{prose}
+\noindent      
+%-----------------------------
+%idaṃ gurubhakteḥ phalaṃ            ātmamadhye manaso viśrāma--karaṇamicchatā      puruṣeṇa sadguroḥ sevāṃ kṛtvā   sāvadhānaṃ manaḥ karaṇīyam/        abhyāsabalāt paramaprāptiḥ/  \E
+%idaṃ gurubhaktaiḥ phalaṃ           ātmamadhye manaso viśrāma--karaṇamichatā       puruṣeṇa sadguroḥ sevāṃ kṛtvā   sāvadhānaṃ manaḥ karaṇīyaṃ         abhyāsabalāt paramaprāptiḥ \P
+%idaṃ gurubhakteḥ  phalaṃ//         ātmamadhye manaso viśrāmaṃ karaṃṇaṃmicchatāṃ// puruṣeṇa sadguroḥ sevāṃ kṛtvā   sāvadhānaṃ manaḥ kṛtvā karaṇīyam// abhyāsabalāt paramaprāptiḥ//\B
+%idaṃ gurubhakteḥ  phalaṃ//         ātmamadhye manaso viśrāmaṃ karaṇam icchatāṃ//  puruṣeṇa sadguroḥ sevāṃ kṛtvā   sāvadhānaṃ manaḥ kṛtvā karaṇīyaṃ...abhyāsabalāt// paramaprāptiḥ// \L
+%idaṃ gurubhakteḥ  phalaṃ           ātmamadhye manaso viśrāma--karaṇam icchatā     puruṣeṇa sadguruḥ sevāṃ kṛ..    sāvadhānaṃ manaḥ karaṇīyaṃ/        abhyāsabalāt paramaprāptiḥ/\D
+%idaṃ gurubhakteḥ  phalaṃ           ātmamadhye manaso viśrāma--karaṇam icchatā     puruṣeṇa sadguruḥ sevāṃ kṛtvā   sāvadhānaṃ manaḥ karaṇīyaṃ         abhyāsabalāt paramaprāptiḥ\U1
+%idaṃ gurubhakteḥ  phalaṃ bhavati// ātmamadhye manaso viśrāme  karaṇam ichatā      puruṣeṇa sadguroḥ sevāṃ kṛtvā// māvadhānaṃ manaḥ karaṇīyaṃ//       abhyāsabalāt paramapadaprāptiḥ\U2
+%\om                                                                 \N1
+%\om                                                                 \N2
+%-----------------------------
+%This is the result of devotion to the teacher. Within the self there exists the desire of the mind to find tranquility. By the person that has served the teacher, the mind should be made attentive. Through the power of practice the highest place is reached.
+%-----------------------------
+idaṃ
+\app{\lem[wit={ceteri}]{gurubhakteḥ}
+  \rdg[wit={P}]{gurubhaktaiḥ}}
+\app{\lem[wit={ceteri}]{phalaṃ}
+  \rdg[wit={U2}]{phalaṃ bhavati}}/
+ātmamadhye manaso
+\app{\lem[wit={ceteri},alt={viśrāmakaraṇam}]{viśrāmakaraṇa\skp{m-i}}
+  \rdg[wit={B}]{viśrāmaṃ karaṃṇaṃm}
+  \rdg[wit={L}]{viśrāmaṃ karaṇam}
+}\app{\lem[wit={ceteri},alt={icchatā}]{\skm{m-i}cchatā}
+  \rdg[wit={B,L}]{icchatāṃ}}
+puruṣeṇa
+\app{\lem[wit={ceteri}]{sadguroḥ}
+  \rdg[wit={D,U1}]{sadguruḥ}} 
+sevāṃ
+\app{\lem[wit={ceteri}]{kṛtvā}
+  \rdg[wit={D}]{kṛ..}
+  \rdg[wit={U2}]{kṛtvā ||}}
+\app{\lem[wit={ceteri}]{sāvadhānaṃ}
+  \rdg[wit={U2}]{māvadhānaṃ}}
+manaḥ
+\app{\lem[wit={ceteri}]{karaṇīyaṃ}
+  \rdg[wit={L}]{kṛtvā karaṇīyaṃ}
+  \rdg[wit={B}]{kṛtvā karaṇīyam ||}}
+\app{\lem[wit={ceteri}, alt={abhyāsabalāt}]{abhyāsabalā\skp{t-pa}}
+  \rdg[wit={L}]{abhyāsabalāt ||}
+}\app{\lem[wit={ceteri}, alt={paramaprāptiḥ}]{\skm{t-pa}ramaprāptiḥ}
+  \rdg[wit={U2}]{paramapadaprāptiḥ}}/
+%-----------------------------
+% tena      svaśiṣyamanasaḥ  svāsthyaṃ   karttavyam/  candrasūryyau yāvat piṃḍe  niścalau bhavataḥ//  \E %[p.57]
+% tena      svasya manasaḥ   samarasyaṃ  karttavyam   caṃdrasūryau  yāvat piṃḍo  niścalo  bhavati     \P
+% tena      svasya manasaḥ                                                                            \B %stemma point?! omission?!
+% tena      svasya manasaḥ   samarasaṃ   karttavyaṃ   caṃdrasūrya---yāt   piṃḍo  niścalo  bhavati//   \L
+% tena saha svasya manaḥ     samarasyaṃ  karttavyaṃ/  caṃdrasūryau  yāvit piṃde  niścalau bhavatiḥ//  \D
+% tena saha svascha manaḥ                karttavyaṃ   caṃdrasūryau  yāvat piṃdau niścalo  bhavati     \U1
+% tena      svasya manasaḥ   samarasyaṃ  karttavyaṃ// caṃdrasūrya---vat   piṃḍo  niścalo  bhavati//   \U2  %%%421verso.jpg
+% \om                                                                \N1
+%\om                                                                 \N2
+%-----------------------------
+%He shall create equanimity in his own mind. Just as the sun and moon [are unchangeable] in the same way and unchangeable body arises.
+%----------------------------
+\note[type=source, labelb=312, labele=_312e, nosep]{cf. YSv (PT p. 844): candraḥ sūryaḥ sthiro yāvat tāvad dehasthitis tathā | tāvad ekaṃ samābhāṣya prāpnoti ca sadāgatiḥ | sa bhavet kavitā dhīrā niścalā śāntir eva ca | gurupādaprasādena tad aikyaṃ yāti siddhibhāk |}
+\app{\lem[wit={ceteri}]{tena}
+  \rdg[wit={D,U1}]{tena saha}}
+\app{\lem[wit={B,L,P,U2}]{svasya manasaḥ}
+  \rdg[wit={D}]{svasya manaḥ}
+  \rdg[wit={U1}]{svascha manaḥ}
+  \rdg[wit={E}]{svaśiṣyamanasaḥ}}
+\app{\lem[wit={L}]{samarasaṃ}
+  \rdg[wit={D,P,U2}]{samarasyaṃ}
+  \rdg[wit={E}]{svāsthyaṃ}
+  \rdg[wit={B,U1}]{\om}}
+\app{\lem[wit={ceteri}]{karttavyaṃ}
+  \rdg[wit={B}]{\om}}
+\app{\lem[wit={E,P,U1}]{candrasūryau yāvat}
+  \rdg[wit={D}]{caṃdrasūryau yāvit}
+  \rdg[wit={L}]{caṃdrasūryayāt}
+  \rdg[wit={U2}]{caṃdrasūryavat}
+  \rdg[wit={B}]{\om}}
+\app{\lem[wit={P,L,U2}]{piṃḍo}
+  \rdg[wit={D,E}]{piṃḍe}
+  \rdg[wit={U1}]{piṃḍau}
+  \rdg[wit={B}]{\om}}
+\app{\lem[wit={P,L,U1,U2}]{niścalo}
+  \rdg[wit={D,E}]{niścalau}
+  \rdg[wit={B}]{\om}}
+\app{\lem[wit={ceteri}]{bhavati}
+  \rdg[wit={D}]{bhavatiḥ}
+  \rdg[wit={E}]{bhavataḥ}}/
+\note[type=source, labelb=313, labele=_313e, nosep]{cf. SSP 5.79 (Ed. p. 105): saṃvitkriyāvikaraṇodayacidvilāsaviśrāntim eva bhajatāṃ svayam eva bhāti | graste svaveganicaye padapiṇḍam aikyaṃ satyaṃ bhavet samarasaṃ guruvatsalānām |}
+%A disciple enjoying the state of samvitkriyā, vikaraṇodaya, cidvilāsa and vishranti, becomes enlightened on his own. Those who are favourite to guru indeed enjoy merger with the Absolute, when pada and piṇḍa are identified on dissolution of one's mental activities. 
+%----------------------------
+%          samyak---svabhāva-kiraṇodaya---cidvilāsa--grastaṃ        svaśāṃti samatāṃ  svayam eva yāti/ \E %[p.57]
+%          samyak---svabhāva-kiraṇodaya---cidvilāsa--grastaṃ        svaśāṃti manasā   svayam eva yāmi \P
+%                                     samaradvilāsa//grastaṃ        svaśāṃti manasā   svam   eva śāṃti// \B %stemma point?! omission?!
+% śloka    samyak---svabhāva-kiraṇodaya---cidvilāsa  grastaṃ        svaśāṃti manasā   svayam eva śāṃti... \L
+% ślokaḥ// samyak---svabhāva-kiraṇodaya---cidvilāsaṃ/grastaṃ        svaśāṃti mavatāṃ  svayam eva yāti/ \D
+% śloka    samyagaḥ svabhāva-kiraṇodaya---cidvilāsaṃ grastasamagraṃ saśāṃti  mahatāṃ  svayam eva yāti \U1
+% ślokaḥ// samyak---svabhāva-karaṇotdṛdi--cidvilāsa--grastaṃ        svaśāṃti bhavatāṃ svayam eva yāti// \U2 %%%421verso.jpg
+% \om                                                                \N1
+%\om                                                                 \N2
+%-----------------------------
+%The complete inherent nature, the appearance of beams of light and play of the divine, completely posessed, inner peace in oneself, mightyness he reaches of his own accord. 
+%-----------------------------
+\app{\lem[wit={D,U2}]{ślokaḥ}
+  \rdg[wit={L,U1}]{śloka}}\dd{}
+\end{prose}
+\begin{tlg}
+  \noindent
+\tl{\app{\lem[wit={ceteri},alt={samyak°}]{samya\skp{k-sva}}
+        \rdg[wit={U1}]{samyagaḥ}
+}\skm{k-sva}bhāva\app{\lem[wit={ceteri},alt={°kiraṇodaya°}]{kiraṇodaya}
+  \rdg[wit={U2}]{karaṇotdṛdi}
+}\app{\lem[wit={ceteri},alt={°cidvilāsa°}]{cidvilāsa}
+  \rdg[wit={B}]{samarad vilāsa ||}
+  \rdg[wit={D}]{cidvilāsaṃ |}
+  \rdg[wit={U1}]{cidvilāsaṃ}
+}\app{\lem[type=emendation, resp=egoscr,alt={°grastasamagra°}]{grastasamagra}
+  \rdg[wit={U1}]{grastasamagraṃ}
+  \rdg[wit={ceteri}]{grastaṃ}
+}\app{\lem[wit={ceteri},alt={°svaśānti°}]{svaśānti}
+  \rdg[wit={U1}]{saśāṃti}
+}\app{\lem[wit={U1}]{mahatāṃ}
+  \rdg[wit={U2}]{bhavatāṃ}
+  \rdg[wit={D}]{mavatāṃ}
+  \rdg[wit={E}]{samatāṃ}
+  \rdg[wit={B,L,P}]{manasā}}
+\app{\lem[wit={ceteri},alt={svayam}]{svaya\skp{m-e}}
+  \rdg[wit={B}]{svam}}\skm{m-e}va
+\app{\lem[wit={ceteri}]{yāti}
+  \rdg[wit={P}]{yāmi}
+  \rdg[wit={B,L}]{śāṃti}}}\\\linelabel{_312e}
+\tl{
+%-----------------------------
+%graste svaveganicaye   padapiṃḍamaikyaṃ   satyaṃ bhavet samarasaṃ guruvatsalāṃ ca//1// \E
+%graste svaveganicaye   padapiṃḍamaikyaṃ   satyaṃ bhavet samarasaṃ guruvatsalānāṃ 1  \P %%%7664.jpg
+%graste svaveganicaye   padapiṃḍamaikyaṃ   sataṃ  bhavet samarasaṃ guruvatsalābhaṃ //1// \B
+%graste svaveganicaye   padapiṃḍamaikyaṃ   satāṃ  bhavet samarasaṃ guruvatsalābhaṃ //1// \L
+%\om                                                                 \N1
+%graste svavegaṃ nicaye padapiḍamaikyaṃ    satyaṃ bhavet samarasaṃ-guruvatsalānāṃ//1//  \D
+%\om                                                                 \N2
+%graste svaveganiścaye  padapiṃḍamaikyaṃ   satyaṃ bhavet samarasaṃ-guruvatchalānāṃ 1  \U1
+%grāme  sveraṃganicaye  yada piṃḍam aikyaṃ satyaṃ bhavet-samarasaṃ guruvatsalānāṃ// \U2
+%-----------------------------
+%Verschlungen eigene-schnellende Bewegung - Ansammlung -> Wenn die eigene Anhäufung [von Gedanken] ruckartig versiegt bei der Einswerdung von internen und externen Universum in Wahrhaftigkeit, welche bei Identifikation eintritt bei denen die von ganzer Seele dem Guru ergeben sind.
+%-----------------------------
+%Bei denen die dem Lehrer von ganzer Seele ergeben sind, wird die kummulative Aktivität des eigenen Geistes ruckartig [vom Guru] genommen und die wahrhaftige Identifikation, die Einswerdung mit dem internen und externen Universum entsteht: die vollständige inhärente Natur, die Erscheinung von Lichtstrahlen, das göttliche Spiel, vollständige Verzückung, innerer Friede und Macht erreicht er wie von selbst.
+%-----------------------------
+\noindent
+  \app{\lem[wit={ceteri}]{graste}
+  \rdg[wit={U2}]{grāme}}
+\app{\lem[wit={ceteri}]{svaveganicaye}
+  \rdg[wit={D}]{svavegaṃ nicaye}
+  \rdg[wit={U1}]{svaveganiścaye}
+  \rdg[wit={U2}]{sveraṃganicaye}}
+\app{\lem[wit={ceteri}]{padapiṃḍamaikyaṃ}
+  \rdg[wit={D}]{padapiḍamaikyaṃ}
+  \rdg[wit={U2}]{yada piṃḍam aikyaṃ}}
+\app{\lem[wit={ceteri}]{satyaṃ}
+  \rdg[wit={B}]{sataṃ}
+  \rdg[wit={L}]{satāṃ}}
+bhavet-samarasaṃ
+\app{\lem[wit={D,P,U2}]{guruvatsalānāṃ}
+  \rdg[wit={B,L}]{guruvatsalābhaṃ}
+  \rdg[wit={E}]{guruvatsalāṃ ca}
+  \rdg[wit={U1}]{guruvatchalānāṃ}}\dd{} \begin{otherlanguage}{english}\coro{\uproman{44}.1}\end{otherlanguage}\hskip-2pt\dd{}}\linelabel{_313e}
+\end{tlg}
+\vfill
+\nolinenumbers
 \bigskip
-%\linenumbers
+\centerline{\textrm{\small{[\uproman{45}. Avadhūta]}}}%killi 
+\label{avadhuta}
+\bigskip
+\linenumbers
 \begin{prose}
   \noindent
-    \note[type=testium, labelb=165, lem={\textbf{Ri}}]{SSP 1.66 (Ed. p. 29): atha nāḍīnāṃ daśadvārāṇi | iḍā piṅgalā ca nāsādvārayor vahataḥ | gāndhārī hastijihvikā ca cakṣurdvārayor vahataḥ | pūṣā yaśasvinī ca karṇadvārayor vahataḥ | alambuṣā ānane vahati | kuhūr gudadvāre vahati | śaṅkhinī liṅgadvāre vahati | suṣumṇā madhyadeśe vahati | sā daṇḍamārgeṇa brahmarandhraparyantaṃ vahati | evaṃ daśanāḍyo daśadvāreṣu vahanti | anyāḥ sarvanāḍyo romakūpeṣu vahanti |}
-\note[type=source, labelb=166, lem={\textbf{Re}}]{PT\textsuperscript{qcr \cdot YSV} (Ed. p. 838): idānīṃ śṛṇu nāḍīnāṃ bhedaṃ vakṣyāmi siddhidam | meruvāhye iḍānāmnī piṅgalayā samanvitā | suṣumnā bhānumārgeṇa brahmadvārāvadhi sthitā | sarasvatī sugandhā tu gāndhārī hastijihvakā | jñātavyā karṇayormadhye netrayoś ca tathāntimā | pūṣā cālambuṣā ceti mūlasthā kutracit tathā | liṅgadvārādiḍāmārge brahmasthānāvadhi priye | nāḍyantaṃ pratilomeṣu sahasrāṇāṃ dvisaptatiḥ |}
-%-----------------------------   
-%idānīṃ śarīramadhye nāḍīnāṃ       bhedāḥ   kathyante  daśamukhyanāḍyaḥ/ \E
-%idānīṃ śarīramadhye nāḍīnāṃ       bhedāḥ   kathyaṃte  daśamukhyānāḍyaḥ \P
-%idānī  śarīramadhye nāḍī----------bhedaḥ   kathyate// daśamukhyenāḍyā \B
-%idānī  śarīramadhye nāḍī----------bhedaḥ   kathyate// daśamukhyānāḍayas... \L
-%idānīṃ śarīramadhye nāḍīnām aparo bhedaḥ   kathyate// daśamukhyanādhyaḥ/ \N1
-%idānīṃ śarīramadhye nāḍīnām aparo bhedaḥ// kathyaṃte  daśamukhyānādhyaḥ// \D
-%idānī  śarīramadhye nāḍīnām aparo bhedāḥ   kathyate// daśamukhyanāḍyaḥ// \N2
-%idānīṃ śarīramadhye nāḍīnām aparo bhedāḥ   kathyate   daśamukhyanāḍyas \U1
-%idānīṃ śarīramadhye nāḍīnaṃ       bhedaḥ   kathyate   daśamukhyanāḍyaḥ// \U2
+%---------------------------- 
+%idānīm avadhūtapuruṣasya lakṣaṇaṃ kathyate/ \E
+%idānīm avadhūtapuruṣasya lakṣaṇaṃ kathyate \P
+%idānīm avadhūtapuruṣasya lakṣaṇam āha/ \B DSCN7171.jpg last line
+%idānīm avadhūtapuruṣasya lakṣaṇam āha// \L
+%\om                                                                 \N1
+%idānīm mavadhūtapuruṣasya lakṣaṇam kathyate// \D
+%\om                                                                 \N2
+%idānīm avadhūtapuruṣasya lakṣaṇam kathyate \U1
+%idānīm avadhūtapuruṣasya lakṣaṇaṃ kathyate// \U2
 %-----------------------------
-%Now the divisions of channels within the body are explained. There are ten primary channels. 
+%Now the characteristic of an Avadhūta-person is taught. 
+%----------------------------
+idānīm-avadhūtapuruṣasya
+\app{\lem[wit={ceteri}]{lakṣaṇaṃ}
+   \rdg[wit={B,L,D,U1}]{lakṣaṇam}}
+\app{\lem[wit={ceteri}]{kathyate}
+  \rdg[wit={B,L}]{āha}}/ 
+       \end{prose}
+       \begin{tlg}
+            \noindent
+%----------------------------
+%yasya haste  dhairyadaṇḍaḥ kharparaṃ  śūnyam āsanam/  yogaiśvaryeṇa saṃpannaḥ sovadhūta  udāhṛtaḥ//2// \E %%%SSP 6.10
+%yasya haste  dhairyadaṇḍaḥ kharparaṃ  śūnyam āsanam   yogaiśvaryeṇa saṃpanna  sovadhūta  udāhṛtaḥ 2  \P
+%yasya haste  dhairyadaṇḍaḥ kharparaṃ  śunyabhāsanam// yogaiśvaryai  saṃpannaḥ sovadhūtam udāhṛtaṃ// \B DSCN7172 Z.1
+%yasya haste  dhairyadaṇḍaḥ kharparaṃ  śubhāsanam//    yogaiśvarye   saṃpannaḥ sovadhūtam udāhṛtaṃ// \L
+%yasya haste  dhairyadaṇḍaḥ kharaparaṃ śūnyam ānasaṃ/  yogaiśvaryeṇa saṃpannaḥ sovadhūta  udāhṛtaḥ//2// \D
+%yasya haste  dhairyadaṇḍaḥ kharaparaṃ śūnyanāmakaṃ    yogaiśvaryeṇa saṃpannaḥ sovadhūta  udāhṛtaḥ 2 \U1 %%%292.jpg
+%yasya hastai dhairyadaṇḍaḥ kharparaṃ  śūnyam āsanaṃ// yogaiśvaryeṇa sapannaḥ  sovadhūta  udāhṛtaḥ//  \U2
+%\om                                                                                            \N1
+%\om                                                                                            \N2
 %-----------------------------
-\app{\lem[wit={ceteri}]{idānīṃ}
-  \rdg[wit={B,L,N2}]{idānī}}
-śarīramadhye 
-\app{\lem[wit={ceteri}]{nāḍīnāṃ}
-  \rdg[wit={B,L}]{nāḍī°}
-  \rdg[wit={X}]{nāḍīnām aparo}}
-\app{\lem[wit={ceteri}]{bhedāḥ}
-  \rdg[wit={B,D,L,N1}]{bhedaḥ}}
-\app{\lem[wit={E,P,N2,U1}]{kathyante}
-  \rdg[wit={ceteri}]{kathyate}}/
-\app{\lem[wit={E,N2,U1,U2}]{daśamukhyanāḍyaḥ}
-  \rdg[wit={P}]{daśamukhyānāḍyaḥ}
-  \rdg[wit={B}]{daśamukhyenāḍyā}
-  \rdg[wit={L}]{daśamukhyānāḍayas}
-  \rdg[wit={D,N1}]{daśamukhyanādhyaḥ}}/
-%----------------------------- 
-%tanmadhye dvayam       iḍā  piṃgalāsaṃjñakaṃ       nāsādvāre tiṣṭhati/ \E
-%tanmadhye nāḍīdvayaṃ   idāṃ piṃgalāsaṃjñakaṃ       nāsādvāre tiṣṭhati  \P
-%tanmadhye nāḍīdvayaṃ/  idāpiṃgalāsaṃjñīkāḥ         nāsādvāre tiṣṭhati//  \B
-%tanmadhye nāḍīdvayaṃ   idāpiṃgalāsaṃjñīkāḥ         nāsādvāre tiṣṭhati//  \L
-%tanmadhye nāḍīdvayam/  idāpiṃgalāsaṃjñakaṃ         nāsādvāre tiṣṭhati//  \N1
-%tanmadhye nāḍīdvayaṃ   idāpiṃgalāsaṃjñakaṃ         nāsānāsādvāre tiṣṭhati//  \D
-%tanmadhye nāḍīdvayam/  idānīṃ piṃgalāsaṃjñakaṃ     nāsādvāre tiṣṭhati//  \N2
-%tanmadhye nāḍīdvayaṃ   idāpiṃgalāsaṃjñākaṃ         nāsādvāre tiṣṭhati  \U1
-%tanmadhye nāḍidvayaṃ// idā// piṃgalā// saṃjñākaṃ// nāsādvāre tiṣṭhati//  \U2
-%-----------------------------
-%Among them is a pair of channels. [Their] designation is Idā and Piṅgalā [and they] exist at the entrance of the nose. 
-%-----------------------------
-tanmadhye
-\app{\lem[wit={ceteri}]{nāḍīdvayam}
-  \rdg[wit={E}]{dvayam}}/
-\app{\lem[wit={E}, alt={iḍāpiṅgalā}]{iḍāpiṃgalā}
-  \rdg[wit={ceteri}]{idā piṃgalā}
-  \rdg[wit={N2}]{idānīṃ piṃgalā}
-  \rdg[wit={P}]{idāṃ piṃgalā}
-}\app{\lem[wit={ceteri}]{saṃjñakaṃ}
-  \rdg[wit={U1,U2}]{saṃjñākaṃ}
-  \rdg[wit={B,L}]{saṃjñīkāḥ}}
-\app{\lem[wit={ceteri}]{nāsādvāre}
-  \rdg[wit={D}]{nāsānāsādvāre}}
-tiṣṭhati/
-%-----------------------------
-%suṣumṇā    tālumārge   brahmadvāraparyantaṃ   vahati tiṣṭhati/ \E
-%suṣumṇā    tālumārgeṇa brahmaraṃdhraparyanta--vahati tiṣṭhati... \P
-%suṣumṇā    tālumārge   brahmaraṃdhraparyantaṃ vahatī tiṣṭhati... \B
-%suṣumṇā    tālumārge   brahmaraṃdhraparyantaṃ vahati tiṣṭhati... \L
-%suṣumṇā tu tālumārgeṇa brahmadvāraparyantaṃ   vahatī tiṣṭhati... \N1
-%suṣumṇā tu tālumārgeṇa brahmadvāraparyantaṃ   vahatī tiṣṭhati    \D
-%suṣumṇā tu tālumārge   brahmadvāraparyantaṃ   vahatī tiṣṭhati// \N2
-%suṣumṇā tu tālumārgeṇa brahmadvāraparyantaṃ   vahati tiṣṭhati \U1
-%suṣumṇā    tālumārgeṇa brahmadvāraparyantaṃ   vahati// \U2
-%-----------------------------
-%The Suṣumṇā flows by the path of the sun to the door of Brahma.  
-%-----------------------------
-\app{\lem[wit={Y}]{suṣumṇā}
-  \rdg[wit={X}]{suṣumṇā tu}}
-\app{\lem[type=conjecture, resp=egoscrconj]{bhānumārgena}
-  \rdg[wit={D,P,N1,U1,U2}]{tālumārgeṇa}
-  \rdg[wit={B,E,L,N2}]{tālumārge}}
-\note[type=philcomm, labelb=166a, lem={bhānumārgena}]{Given the incongruity of \textit{tālu} in the given context, and the availability of a phonetically analogous and semantically superior alternative in the form of the term \textit{bhānu} as proposed by PT\textsuperscript{qcr \cdot YSV}, I have conjectured the latter as the more plausible option.}
-brahma\app{\lem[wit={ceteri}, alt={°dvāra°}]{dvāra}
-  \rdg[wit={B,L,P}]{°raṃdhra°}
-}paryantaṃ
-\app{\lem[wit={U2}]{vahati}
-  \rdg[wit={E,L,P,U1}]{vahati tiṣṭhati}
-  \rdg[wit={ceteri}]{vahatī tiṣṭhati}}/\textsuperscript{\begin{otherlanguage}{english}\coro{[\lowroman{5}]}\end{otherlanguage}}
-%-----------------------------
-%        sarasvatī mukhamadhye tiṣṭhati/ \E
-%        sarasvatī mukhamadhye tiṣṭhati  \P
-%        sarasvatī mukhamadhye tiṣṭhatī/ \B
-%        sarasvatī mukhamadhye tiṣṭhati/ \L
-%        sarasvatī mukhamadhye varttate/ \N1
-%        sarasvatī mukhamadhye varttate// \D
-%        sarasvatī mukhamadhye varttate/ \N2
-%        sarasvatī mukhamadhye varttate \U1
-%ti sraḥ sarasvati mukhamadhye tiṣṭhati// \U2
-%-----------------------------
-%The Sarasvatī[-channel] exists at the centre of the face. 
-%-----------------------------
-\app{\lem[wit={ceteri}]{sarasvatī}
-  \rdg[wit={U2}]{ti sraḥ sarasvati}}
-mukhamadhye
-\app{\lem[wit={X}]{vartate}
-  \rdg[wit={E,L,P,U2}]{tiṣṭhati}
-  \rdg[wit={B}]{tiṣṭhatī}}/
-%-----------------------------
-%gāṃdhārīhastijihvākarṇayor            madhye  vahalyau  tiṣṭhataḥ/    \E
-%gāṃdhārīhastinījihve karṇayor         madhye  vahatyau  tiṣṭhataḥ   \P
-%gāṃdhārīhastījihve karṇa----------------------vahatyo   tiṣṭhati//                \B
-%gāṃdhārīhastijihve karṇa----------------------vahatyo   tiṣṭhati...               \L
-%gāṃdhārīhastinījihve karṇayor         madhye  vahatyau  tiṣṭhataḥ// \N1
-%gāṃdhārīhastinījihve karṇayor         madhye  vahatyau  tiṣṭhataḥ// \D
-%gāṃdhārīhastinījihve karṇayor         madhye  vahatyau  tiṣṭhataḥ// \N2
-%gāṃdhādīharratījihvakarṇayor          madhye            tiṣṭhataḥ              \U1
-%gāṃdhārī// hastinī// jihve// netrayor madhye  vahaṃtyaḥ//    \U2
-%-----------------------------
-%The two rivers, Gāṃdhārī and Hastjihvā, exist within the two ears. 
-%-----------------------------
-gāṃdhārī\app{\lem[wit={E}, alt={hastijihvākarṇayor}]{hastijihvākarṇayo\skp{r-ma}}
-  \rdg[wit={D,P,N1,N2}]{hastinījihve karṇayor}
-  \rdg[wit={B,L}]{hastījihve karṇa°}
-  \rdg[wit={U1}]{harratījihvakarṇayor}
-  \rdg[wit={U2}]{hastinī || jihve || netrayor}}
-\app{\lem[wit={ceteri}, alt={madhye}]{\skm{r-ma}dhye}
-  \rdg[wit={L,B}]{\om}}
-\app{\lem[wit={D,P,N1,N2}]{vahatyau}
-  \rdg[wit={E}]{vahalyau}
-  \rdg[wit={B,L}]{vahatyo}
-  \rdg[wit={U2}]{vahaṃtyaḥ}}
-\app{\lem[wit={ceteri}]{tiṣṭhataḥ}
-  \rdg[wit={B,L}]{tiṣṭhati}
-  \rdg[wit={U2}]{\om}}/
-%-----------------------------
-%pūṣālambusemā         netrayor madhye rvahalyā tiṣṭhataḥ/ \E
-%pūṣālaṃbuse           netrayor madhye vahatyau tiṣṭataḥ \P
-%pūṣoḍalabuṣe----------netra----madhye vahatyo  tiṣṭhati/ \B
-%pūṣo ulabuso          netra----madhye vahatyo  tiṣṭhaṃti// \L
-%pūṣāṃalaṃbuṣe         netrayor madhye vahatyo  tiṣṭhataḥ/ \N1
-%pūṣāṃalaṃbuṣe         netrayor madhye vahatyau tiṣṭhataḥ// \D
-%pūṣāṃalaṃbuṣe         netayor  madhye vahatyo  tiṣṭhataḥ/ \N2
-%pūṣālaṃbuṣe           netayor  madhye vahatyau tiṣṭhataḥ \U1
-%pūṣāya śakhinī// karṇayor      madhye vahatyo  tiṣṭhata// alaṃbuṣā// bhu?madhye vaṃhatyo tiṣṭhati// \U2
-%-----------------------------
-%The two rivers Pūṣā and Ālaṃbuṣā are situated at the center of the two eyes. 
-%-----------------------------
-\app{\lem[resp=egoscr, type=emendation, alt={pūṣālaṃbuṣānetrayor}]{pūṣālaṃbuṣānetrayo\skp{r-ma}}
-  \rdg[wit={E}]{pūṣālambusemā netrayor}
-  \rdg[wit={P}]{pūṣālaṃbuse netrayor}
-  \rdg[wit={B}]{pūṣoḍalabuṣe netra°}
-  \rdg[wit={L}]{pūṣo ulabuso netra°}
-  \rdg[wit={D,N1}]{pūṣāṃalaṃbuṣe netrayor}
-  \rdg[wit={N2}]{pūṣāṃalaṃbuṣe netayor}
-  \rdg[wit={U1}]{pūṣālaṃbuṣe netayor}
-  \rdg[wit={U2}]{pūṣāya śakhinī || karṇayor}
-}\skm{r-ma}dhye
-\app{\lem[wit={ceteri}]{vahatyau}
-  \rdg[wit={E}]{rvahalyā}
-  \rdg[wit={B,L,N1,N2,U2}]{vahatyo}}
-\app{\lem[wit={D,E,N1,N2,U1}]{tiṣṭhataḥ}
-  \rdg[wit={B}]{tiṣṭhati}
-  \rdg[wit={L}]{tiṣṭhaṃti}
-  \rdg[wit={P}]{tiṣṭataḥ}
-  \rdg[wit={U2}]{tiṣṭhata || alaṃbuṣā || bhrumadhye vaṃhatyo tiṣṭhati ||}}/
-%-----------------------------
-%śaṃkhinī liṃgadvārād ārabhye--ḍāmārgeṇa     brahmasthānaparyaṃtaṃ tiṣṭhatīti/     \E
-%śaṃkhinī liṃgadvārād ārabhya iḍāmārgeṇa     brahmasthānaparyaṃtaṃ tiṣṭhati      \P   %%%%%%%7648.jpg
-%śaṃkhinī liṃgadvārād ārabhya iḍāmārgeṇa     brahmasthānaparyaṃtaṃ tiṣṭhati/     \B
-%śaṃkhinī liṃgadvārād ārabhya iḍāmārgeṇa     brahmasthānaparyaṃtaṃ tiṣṭhati//    \L 
-%śaṃkhanī liṃgadvārād ārabhya iḍāmārgeṇa     brahmasthānaparyaṃtaṃ tiṣṭhati/     \N1
-%śaṃkhinī liṃgadvārād ārabhya iḍāmārgeṇa     brahmasthānaparyaṃtaṃ tiṣṭhati//     \D
-%śaṃkhinī liṃgadvārād ārabhya iḍānīṃ mārgeṇa brahmasthānaparyaṃtaṃ tiṣṭhati/ \N2
-%śaṃkhinī liṃgadvārārabhya    iḍāmārgeṇa     brahmasthānaparyaṃtaṃ tiṣṭhati      \U1
-%kuhū     liṃgadvārād ārabhya iḍāmārgeṇa     brahmasthānaparyaṃtaṃ tiṣṭhati// śāṃkhinī mūladvārād arabhya piṃgalamargeṇa brahmasthānaparyaṃtaṃ tiṣṭhati// \U2
-%-----------------------------
-%Śaṃkhinī stretches from the the beginning of the opening of the gender through the Iḍā-channel up to the Brahmasthāna. Kuhu stretches from the entrance of the root through the Piṅgalā-channel up to the Brahmasthāna.    
-%-----------------------------
-\app{\lem[wit={ceteri}]{śaṃkhinī}
-  \rdg[wit={N1}]{śaṃkhanī}
-  \rdg[wit={U2}]{kuhū}}
-\app{\lem[wit={ceteri}, alt={liṃgadvārād}]{liṃgadvārā\skp{d-ā}}
-  \rdg[wit={U1}]{liṃgadvārā°}}
-\app{\lem[wit={ceteri}, alt={ārabhye}]{\skm{d-ā}rabhye}
-  \rdg[wit={ceteri}]{ārabhya}
-}\app{\lem[wit={E},alt={°ḍāmārgeṇa}]{ḍāmārgeṇa}
-  \rdg[wit={ceteri}]{iḍāmārgeṇa}
-  \rdg[wit={N2}]{iḍānīṃ mārgeṇa}}
-brahmasthānaparyaṃtaṃ 
-\app{\lem[wit={ceteri}]{tiṣṭhati}
-  \rdg[wit={E}]{tiṣṭhatīti}}/
-\extra{\app{\lem[type=conjecture, resp=egoscrconj]{kuhū}
-    \rdg[wit={U2}]{śāṃkhinī}} mūladvārād-arabhya
-\app{\lem[resp=egoscr, type=emendation, alt={piṃgalā°}]{piṅgalā}
-  \rdg[wit={U2}]{piṃgala°}}margeṇa brahmasthānaparyaṃtaṃ tiṣṭhati/}
-\note[type=philcomm, labelb=177, lem={kuhū}]{Without Kuhū as found in \getsiglum{U2} only, the list would be incomplete. In \getsiglum{U2} Śaṃkhinī and Kuhū are swapped, neither of them is found in PT\textsuperscript{qcr \cdot YSV} but both channels and their proper location are in SSP 1.66.}\textsuperscript{\begin{otherlanguage}{english}\coro{[\lowroman{10}]}\end{otherlanguage}}
-%-----------------------------
-%etādṛśa  nāḍyo daśasu dvāreṣu tiṣṭhanti/    \E
-%etādṛṣā  nāḍyo daśasu dvāreṣu tiṣṭhaṃti      \P
-%etādṛṣyā nāḍyo daśasu dvāreṣu tiṣṭhaṃti/    \B
-%etādṛṣyā nāḍyo daśa   dvāreṣu    tiṣṭhaṃti/    \L 5876_15.jpg
-%etādaśa  nāḍyo daśasu dvāreṣu tiṣṭhaṃti/    \N1
-%etādaśa  nāḍyo daśasu dvāreṣu tiṣṭhaṃti//   \D
-%etā            daśasu  dvāreṣu tiṣṭhaṃti/                \N2
-%etādṛśa  nāḍyo daśasv adhāreṣu  tiṣṭhati    \U1
-%etādaśa  nāḍyo daśaśoṣu dvāreṣu tiṣṭhaṃti// \U2 %%%413.jpg
-%-----------------------------
-%In such a way the channels are situated at the 10 openings. 
-%-----------------------------
-\app{\lem[wit={P}]{etādṛṣā}
-  \rdg[wit={D,E,N1,U1,U2}]{etādṛśa}
-  \rdg[wit={B,L}]{etādṛṣyā}
-  \rdg[wit={N2}]{etā}}
-\app{\lem[wit={ceteri}]{nāḍyo}
-  \rdg[wit={N2}]{\om}}
-\app{\lem[wit={ceteri}]{daśasu dvāreṣu}
-  \rdg[wit={L}]{daśa dvāreṣu}
-  \rdg[wit={U1}]{daśasv adhāreṣu}}
-\app{\lem[wit={ceteri}]{tiṣṭhanti}
-  \rdg[wit={U1}]{tiṣṭhati}}/
-%-----------------------------
-%anyā dvisaptatisahasraparimitā                      nāḍayo lomnāṃ mūleṣu sūkṣmarūpeṇa tiṣṭanti// \E
-%anyā dvisaptatisahasraparimitā                      nāḍyo  lomnā  mūleṣu sūkṣmarūpeṇa tiṣṭaṃti      \P
-%anyā dvisaptatīsahasraparimitā                      nāḍyo  lomnā  mūleṣu sūkṣmarūpeṇa tiṣṭaṃti// \B
-%anyā dvisaptatisahasraparimitā                      nāḍyo  lomnā  mūleṣu sūkṣmarūpeṇa tiṣṭaṃti// \L
-%anyā dvisaptatisahasraparamitā                      nāḍyā  lomnāṃ mūleṣu sūkṣmarūpeṇa tiṣṭaṃti// \N1
-%anyā dvisaptatisahasraparamitā                      nāḍyā  lomnāṃ mūleṣu sūkṣmarūpeṇa tiṣṭaṃti// \D
-%anyā dvisaptatrisahasraparimitā                     nāḍyā  lomnāṃ mūleṣu sūkṣmarūpeṇa tiṣṭaṃti// \N2
-%anyā dvisaptatisahasraparimitāgryo                         lomnā  mūleṣu sūkṣmarūpeṇa tiṣṭaṃti \U1
-%anyā hidaśonā dvisatyati sahasraḥ//71110// parimitā nādhyo lomnāṃ mūleṣu sūkṣmarūpeṇa tiṣṭaṃti// \U2
-%-----------------------------
-%The other channels measured as 72000 are situated with a subtle form at the roots of the hairs.
-%-----------------------------
-anyā
-\app{\lem[wit={ceteri}]{dvisaptatisahasraparimitā}
-  \rdg[wit={U1}]{dvisaptatisahasraparimitāgryo}
-  \rdg[wit={U2}]{hidaśonā dvisatyati sahasraḥ || 71110 || parimitā}}
-\app{\lem[wit={B,L,P}]{nāḍyo}
-  \rdg[wit={E}]{nāḍayo}
-  \rdg[wit={U2}]{nādhyo}
-  \rdg[wit={U1}]{\om}}
-\app{\lem[wit={D,E,N1,N2,U2}]{lomnāṃ mūleṣu} %%%lomnāṃ = gen pl neutrum v.loman
-  \rdg[wit={B,L,P,U1}]{lomnā}}
-sūkṣmarūpeṇa tiṣṭaṃti\dd{}
-    \end{prose}
+%He, whose staff in the hand is [royal?]courage, whose begging bowl is the shine of emptiness. Furnished with the power of yoga, he is called an accomplished Avadhūta.  
+%----------------------------
+ \note[type=source, labelb=314, nosep]{ \approx  SSP 6.10 (Ed. p. 111): yasya dhairyamayo daṇḍaḥ parākāśaṃ ca kharparaṃ | yogapaṭṭaṃ nijāśaktiḥ so 'vadhūto 'bhidhīyate |}
+\tl{yasya \app{\lem[wit={ceteri}]{haste}
+    \rdg[wit={U2}]{hastai}}
+dhairyadaṇḍaḥ \app{\lem[wit={ceteri}]{kharparaṃ}
+  \rdg[wit={D,U1}]{kharaparaṃ}}
+\app{\lem[wit={ceteri}, alt={śūnyam āsanaṃ}]{śūnyam\skp{-}āsanaṃ}
+  \rdg[wit={B}]{śunyabhāsanam}
+  \rdg[wit={U1}]{śūnyanāmakaṃ}}}\\
+\tl{\app{\lem[wit={ceteri}]{yogaiśvaryeṇa}
+  \rdg[wit={B}]{yogaiśvaryai}
+  \rdg[wit={L}]{yogaiśvarye}}
+\app{\lem[wit={ceteri}]{saṃpannaḥ}
+  \rdg[wit={P}]{saṃpanna}
+  \rdg[wit={U2}]{sapannaḥ}}
+\app{\lem[wit={ceteri}]{sovadhūta}
+  \rdg[wit={B,L}]{sovadhūtam}} 
+\app{\lem[wit={ceteri}]{udāhṛtaḥ}
+  \rdg[wit={B,L}]{udāhṛtaṃ}}\dd{} \begin{otherlanguage}{english}\coro{\uproman{45}.1}\end{otherlanguage}\hskip-2pt\dd{}}
+\end{tlg}
   \end{edition}
   \begin{translation}
     \ekddiv{type=trans}
     \begin{tlate}
- \centerline{\textrm{\small{[\uproman{26}.\textsuperscript{\coro{\lowroman{1}-\lowroman{12}}}The 10 Channels]}}}
- \bigskip
- \noindent
-\blfootnote{\ldots the practice bestows \textit{siddhi}s. Even though not directly introduced as a practice, the unknown author of the \textit{Yogasvarodaya} also informs the reader about the \textit{siddhi}-bestowing nature of the channels without any practical instructions (idānīṃ śṛṇu nāḍīnāṃ bhedaṃ vakṣyāmi siddhidam). It seems that in the \textit{Yogasvarodaya}, the ten channels are possibly  part of the practice of Antaralakṣya, too. However, this is not directly expressed. Rather they are presented in textbook style to inform about their existance, in the same way, the \citetitle{ssplonavla} 1.66 presents them. } Now, the divisions of channels within the body are explained.\footnote{Networks of channels are standard in many systems of yoga. The earliest known mention refers to Upaniṣadic literature, such as the \citetitle{brhadaranyaka} 2.1.19. For a detailed depiction of systems of channels in yogic literature, see \citeauthor[2017: 172-174, 184-198]{rootsofyoga2017}.} There are ten primary channels.\footnote{The notion of ten primary channels can already be found in early texts of Haṭhayoga, e.g., the \citetitle{vivekamartandaolda} (Central Library, Baroda Acc. No. 4110, 1534 Saṃvat) 17 \begin{quote} teṣu nāḍisahasreṣu dvisaptatir udāhṛtāḥ |\\
-pradhānāḥ prāṇavāhinyo bhūyas tatra daśa smṛtāḥ || \end{quote} ``Of those thousand channels, seventy-two have been spoken of, and among them, ten are considered most important. They are the main pathways of the vital breaths.''\\ Also cf. \citetitle{fausta1976} 34. However, the enumeration of ten main channels in yogic literature also has predecessors, e.g., in Śaivasiddhānta, cf. \citetitle{sardha} 10.4-5. Other systems, e.g., \citetitle{yajnavalkya} \uproman{4}.26 or \citetitle{vasisthasamhita} 2.21, enumerate fourteen primary channels.} Among them is a pair of channels. [Their] designation is Idā and Piṅgalā [and they] exist at the entrance of the nose. The Suṣumṇā flows by the path of the sun to the door of Brahma.\footnote{The \textit{brahmadvāra} is a synonym for the \textit{brahmarandhra}, ``The aperture of Brahmā/Brahman''; the fontanelle, through which the vital principle of the yogi exists at death, cf. \citeauthor[2017:438]{rootsofyoga2017}}\textsuperscript{\coro{[\lowroman{5}]}} The Sarasvatī[-channel] exists at the center of the face. The two rivers, Gāndhārī and Hastjihvā, exist within the two ears. The two rivers, Pūṣā and Ālaṃbuṣā, are situated at the center of the two eyes. Śaṃkhinī stretches from the beginning of the opening of the gender through the Iḍā-channel up to the place of Brahmā/Brahman\footnote{The \textit{brahmasthāna} is a synonym for \textit{brahmarandhra}. Cf. \citetitle{dhyanabind} 65. Here the \textit{brahmasthāna} is equated with the \textit{sahasrāracakra}.}. Kuhū stretches from the entrance of the root\footnote{The entrance of the root (\textit{mūladvāra}) in this passage refers to the anus, cf. \citetitle{ssplonavla} 1.66 (kuhūr gudadvāre vahati) ``Kuhū conducts through the anus''.} through the Piṅgalā-channel up to the place of Brahmā/Brahman.\textsuperscript{\coro{[\lowroman{10}]}} In such a way, the channels are situated at the ten openings. The other channels, measured as 72000, are situated with a subtle form at the roots of the hairs.
+\centerline{\textrm{\small{[\uproman{44}. Gurubhakti]}}}
+\bigskip
+\noindent
+This is the result of devotion to the teacher: Within the self is the mind's desire to find tranquillity. By the person that has served the teacher, the mind should be made attentive. Through the power of practice, the highest place is reached. By him, equanimity shall be created in his own mind. Just as the sun and moon [are unchangeable], an unchangeable body arises in the same way.
+
+ \paragraph{\uproman{44}. 1} In those who are wholeheartedly devoted to the teacher, the cumulative activity of one's own mind is abruptly taken [by the Guru], and true identification, the union with the internal and external universe, emerges: the complete inherent nature, the manifestation of beams of light, the divine play, complete ecstasy, inner peace, and power are attained effortlessly.\footnote{Source?}
 \end{tlate}
+\begin{tlate}
+  \bigskip
+  \centerline{\textrm{\small{[\uproman{45}. Avadhūta]}}}
+  \bigskip
+  Now the characteristic of an Avadhūta-person is taught.
+  
+   \paragraph{\uproman{45}. 1} He, whose royal rod in hand is courage, whose bowl is the throne of emptiness. Furnished with the power of yoga, he is called an accomplished Avadhūta.  
+    \end{tlate}
   \end{translation}
 \end{alignment}
+\pagebreak %after pp. 103-104
  \chapter{Bibliography}
  \label{sec:bibli}
 \clearpage
